--- a/COP_290_Assignment1-main/templates/welcome.html
+++ b/COP_290_Assignment1-main/templates/welcome.html
@@ -133,103 +133,71 @@
         <div class="StockInfo" id="right-column">
             <div class="StockInfoTableCont">
                 <div class="right-tables">
-
-                    <table class="StockTableHeading">
-                        <tr>
-                            <th class="StockTableHeading">{{curStockInfo['longName']}}</th>
+                    <table class ="StockTableHeading">
+                        <tr><th>{{curStockInfo['longName']}}</th></tr>
+                    </table>
+                    <table class ="StockInfoTable">
+                        <tr><th class="StockInfoTable">DailySummary</th></tr>
+                    </table>
+                    <table class="StockInfoTable">
+                        <tr class = "StockInfoTable">
+                            <td class = "StockInfoTableLeft">Open Price</td>
+                            <td class = "StockInfoTableRight">{{curStockInfo['open']}}</td>
+                        </tr>
+                        <tr class="StockInfoTable">
+                            <td class="StockInfoTableLeft">Prev. Close</td>
+                            <td class="StockInfoTableRight">{{curStockInfo['previousClose']}}</td>
+                        </tr>
+                        <tr class="StockInfoTable">
+                            <td class="StockInfoTableLeft">Current Price</td>
+                            <td class="StockInfoTableRight">{{curStockInfo['currentPrice']}}</td>
+                        </tr>
+                        <tr class="StockInfoTable">
+                            <td class="StockInfoTableLeft">Low</td>
+                            <td class="StockInfoTableRight">{{curStockInfo['dayLow']}}</td>
                         </tr>
                     </table>
-                <table class="StockInfoTable" id="table1">
-                    <thead class="first">
-                        <th class="StockInfoTable"> Daily Summary</th>
-                    </thead>
-                    <tbody>
-                        
-                        <tr class="rows">
-                            <td class="StockInfoTable">Opening Price</td>
-                            <td class="StockInfoTable">{{ curStockInfo['open'] }}</td>
+                    <table class ="StockInfoTable">
+                        <tr><th class="StockInfoTable">Yearly Summary</th></tr>
+                    </table>
+                    <table class="StockInfoTable">
+                        <tr class = "StockInfoTable">
+                            <td class = "StockInfoTableLeft">Yearly Low</td>
+                            <td class = "StockInfoTableRight">{{curStockInfo['fiftyTwoWeekLow']}}</td>
                         </tr>
-                        <tr class="rows">
-                            <td class="StockInfoTable">Previous Close</td>
-                            <td class="StockInfoTable">{{ curStockInfo['previousClose'] }}</td>
+                        <tr class="StockInfoTable">
+                            <td class="StockInfoTableLeft">Yearly High</td>
+                            <td class="StockInfoTableRight">{{curStockInfo['fiftyTwoWeekHigh']}}</td>
                         </tr>
-                        <tr class="rows">
-                            <td class="StockInfoTable">Current Price</td>
-                            <td class="StockInfoTable">{{ curStockInfo['currentPrice'] }}</td>
+                        <tr class="StockInfoTable">
+                            <td class="StockInfoTableLeft">Trailing PE</td>
+                            <td class="StockInfoTableRight">{{curStockInfo['trailingPE']}}</td>
                         </tr>
-                        <tr class="rows">
-                            <td class="StockInfoTable">High</td>
-                            <td class="StockInfoTable">{{ curStockInfo['dayHigh'] }}</td>
+                        <tr class="StockInfoTable">
+                            <td class="StockInfoTableLeft">Forward PE</td>
+                            <td class="StockInfoTableRight">{{curStockInfo['forwardPE']}}</td>
                         </tr>
-                    </tbody>
-                    <tfoot>
-                        <tr class="last">
-                            <td class="StockInfoTable">Low</td>
-                            <td class="StockInfoTable">{{ curStockInfo['dayLow'] }}</td>
+                        <tr class="StockInfoTable">
+                            <td class="StockInfoTableLeft">Forawrd EPS</td>
+                            <td class="StockInfoTableRight">{{curStockInfo['forwardEps']}}</td>
                         </tr>
-                    </tfoot>
-                </table>
-
-                <br>
-                <br>
-                <br>
-                <br>
-                <table id="table1">
-                    <thead class="first">
-                        
-                        
-                        <th class="StockInfoTable">Yearly Summary</th>
-                        
-                    </thead>
-                    <tbody>
-
-                        <tr class="rows">
-                            <td class="StockInfoTable">Yearly Low</td>
-                            <td class="StockInfoTable">{{ curStockInfo['fiftyTwoWeekLow'] }}</td>
+                        <tr class="StockInfoTable">
+                            <td class="StockInfoTableLeft">Trailing EPS</td>
+                            <td class="StockInfoTableRight">{{curStockInfo['trailingEps']}}</td>
                         </tr>
-                        <tr class="rows">
-                            <td class="StockInfoTable">Yearly High</td>
-                            <td class="StockInfoTable">{{ curStockInfo['fiftyTwoWeekHigh']}}</td>
+                        <tr class="StockInfoTable">
+                            <td class="StockInfoTableLeft">Book Value</td>
+                            <td class="StockInfoTableRight">{{curStockInfo['bookValue']}}</td>
                         </tr>
-                        
-                        <tr class="rows">
-                            <td class="StockInfoTable">Trailing PE</td>
-                            <td class="StockInfoTable">{{ curStockInfo['trailingPE'] }}</td>
+                        <tr class="StockInfoTable">
+                            <td class="StockInfoTableLeft">Div Yield</td>
+                            <td class="StockInfoTableRight">{{curStockInfo['dividendYield']}}</td>
                         </tr>
-                        <tr class="rows">
-                            <td class="StockInfoTable">Forward PE</td>
-                            <td class="StockInfoTable">{{ curStockInfo['forwardPE']}}</td>
+                        <tr class="StockInfoTable">
+                            <td class="StockInfoTableLeft">ROE</td>
+                            <td class="StockInfoTableRight">{{curStockInfo['returnOnEquity']}}</td>
                         </tr>
-                        <tr class="rows">
-                            <td class="StockInfoTable">Market Cap</td>
-                            <td class="StockInfoTable">{{ curStockInfo['marketCap'] }}</td>
-                        </tr>
-                        <tr class="rows">
-                            <td class="StockInfoTable">Forward Eps</td>
-                            <td class="StockInfoTable">{{ curStockInfo['forwardEps'] }}</td>
-                        </tr>
-                        <tr class="rows">
-                            <td class="StockInfoTable">Trailing Eps</td>
-                            <td class="StockInfoTable">{{ curStockInfo['trailingEps'] }}</td>
-                        </tr>
-                        
-                        <tr class="rows">
-                            <td class="StockInfoTable">Book value</td>
-                            <td class="StockInfoTable">{{ curStockInfo['bookValue'] }}</td>
-                        </tr>
-                        <tr class="rows">
-                            <td class="StockInfoTable">Div Yield</td>
-                            <td class="StockInfoTable">{{ curStockInfo['dividendYield'] }}</td>
-                        </tr>
-                    </tbody>
-                    <tfoot class="last">
-                        <tr>
-                            <td class="StockInfoTable">ROE</td>
-                            <td class="StockInfoTable">{{ curStockInfo['returnOnEquity'] }}</td>
-                        </tr>
-                    </tfoot>
-
-                </table>
+                    </table>
                 
             </div>
                 <div class="StockInfo2">
