Improved filter table

--- a/COP_290_Assignment1-main/templates/sort.html
+++ b/COP_290_Assignment1-main/templates/sort.html
@@ -76,6 +76,8 @@
             <button type="Submit">Submit</button>
         </form>
 
+        <form action=""></form>
+
         </div>
 
         <div class="content">
