--- a/COP_290_Assignment1-main/static/sort_style.css
+++ b/COP_290_Assignment1-main/static/sort_style.css
@@ -45,3 +45,27 @@ ul {
 li {
     margin-bottom: 0.5rem;
 }
+
+
+table{
+    border-collapse: collapse;
+    width : 100%
+}
+
+th,td{
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+th{
+    background-color: #f2f2f2;
+}
+
+tr:hover{
+    background-color: #f5f5f5;
+}
+
+.content{
+    overflow-x: auto;
+}
