--- a/COP_290_Assignment1-main/static/style.css
+++ b/COP_290_Assignment1-main/static/style.css
@@ -259,7 +259,7 @@ div.StockListAndSearch {
     background-color: #f7f7f7;
     align-items: flex-start;
     flex: 20;
-    height: calc(100vh - 20px);
+    height: calc(100vh - 50px);
     /* display: ; */
     border-right: 3px solid #eeeded;
 }
@@ -287,7 +287,29 @@ div.GraphColumn {
     /* position: relative; */
 
 }
-
+button.GraphButton{
+    background-image: url("./img/graph50.png");
+    width: 50px;
+    height: 50px;
+    padding: 0px;
+    border: none;
+    background-color: white;
+    margin-bottom: 10px;
+}
+button.GraphButton:hover{
+    background-color: #dedede;
+}
+button.TableButton{
+    background-image: url("./img/table50.png");
+    width: 50px;
+    height: 50px;
+    padding: 0px;
+    border: none;
+    background-color: white;
+}
+button.TableButton:hover{
+    background-color: #dedede;
+}
 .buttons-over-graph {
     position: absolute;
     /* top: 15%; */
