Cleared up error messages not showing up on the login screen

--- a/COP_290_Assignment1-main/templates/login.html
+++ b/COP_290_Assignment1-main/templates/login.html
@@ -17,6 +17,7 @@
             <div class="form-group">
                 <button type="submit" class="LoginButton">Login</button>
             </div>
+            <label>{{loginErrorMsg}}</label>
         </form>
         <p>Don't have an account? <a href="/register">Register here</a></p>
     </div>
