--- a/COP_290_Assignment1-main/templates/login.html
+++ b/COP_290_Assignment1-main/templates/login.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body class="LoginBody">
+    {% for message in get_flashed_messages() %}
+        <div class="ErrorMsg">{{message}}</div>
+    {% endfor %}
     <div class="form-container">
         <h2 class = "LoginLabel">Login</h2>
         <form action="/login" method="post">
