--- a/COP_290_Assignment1-main/static/sort_style.css
+++ b/COP_290_Assignment1-main/static/sort_style.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 
 header {
@@ -23,16 +24,18 @@ nav ul li {
 
 .container {
     display: flex;
+    height: 100%;
 }
 
 .sidebar {
     width: 25%;
     padding: 1rem;
     background-color: #f4f4f4;
+    height: 100%;
 }
 
 .content {
-    flex-grow: 1;
+    /* flex-grow: 1; */
     padding: 1rem;
 }
 
@@ -48,7 +51,7 @@ li {
 
 
 table{
-    border-collapse: collapse;
+    /* border-collapse: collapse; */
     width : 100%
 }
 
@@ -67,5 +70,24 @@ tr:hover{
 }
 
 .content{
-    overflow-x: auto;
+    /* overflow-x: auto; */
+}
+
+.table-button{
+    background-color: #f2f2f2;
+    border: none ;
+    padding: 8px;
+    text-align: left;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.button-row th{
+    background-color: #f2f2f2;
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+    position: sticky;
+    top: 0;
+    z-index: 2;
 }
