--- a/COP_290_Assignment1-main/templates/sort.html
+++ b/COP_290_Assignment1-main/templates/sort.html
@@ -19,37 +19,6 @@
 
     <div class="container">
         <div class="sidebar">
-            <!-- <form action="/process_filters_market_cap" method="POST">
-                <label for="sort">Market Cap:</label>
-                <select name="marketCap" id="sort" onchange="this.form.submit()">
-                    <option value="Any" {% if filter_market_cap=="Any" %} selected {% endif %}>Any</option>
-                    <option value="large" {% if filter_market_cap=="large" %} selected {% endif %} >Large Market Cap(Greater than 25000Cr)</option>
-                    <option value="mid" {% if filter_market_cap=="mid" %} selected {% endif %} >Mid Market Cap(Between 8500Cr to 25000Cr)</option>
-                    <option value="small" {% if filter_market_cap=="small" %} selected {% endif %} >Small Market Cap (Less than 8500 Cr)</option>
-                    <!-- Add more sorting options as needed -->
-                <!-- </select>
-            </form>
-            <form action="/process_filters_pe_rat" method="POST">
-                <label for="sort">P/E Ratio:</label>
-                <select name="pe_ratio" id="sort" onchange="this.form.submit()">
-                    <option value="Any" {% if filter_pe_rat=="Any" %} selected {% endif %}>Any</option>
-                    <option value="l5" {% if filter_pe_rat=="l5" %} selected {% endif %} >Less than 5</option>
-                    <option value="b_5_10" {% if filter_pe_rat=="b_5_10" %} selected {% endif %} >Between 5 and 10</option>
-                    <option value="b_10_20" {% if filter_pe_rat=="b_10_20" %} selected {% endif %} >Between 10 and 20</option>
-                    <option value="b_20_50" {% if filter_pe_rat=="b_20_50" %} selected {% endif %} >Between 20 and 50</option>
-                    <option value="g50" {% if filter_pe_rat=="g50" %} selected {% endif %} >Greater than 50</option>
-                    Add more sorting options as needed
-                 </select>
-            </form>
-            <form action="/process_filters_vol" method="POST">
-                <label for="sort">Average Volume:</label>
-                <select name="vol" id="sort" onchange="this.form.submit()">
-                    <option value="Any" {% if filter_avg_vol=="Any" %} selected {% endif %}>Any</option>
-                    <option value="l1" {% if filter_avg_vol=="l5" %} selected {% endif %} >Less than 1 Lakh</option>
-                    <option value="b_1_10" {% if filter_avg_vol=="l5" %} selected {% endif %} >Between 1 lakh and 10 lakh</option>
-                    <option value="g10" {% if filter_avg_vol=="b_5_10" %} selected {% endif %} >More than 10 lakh shares per day</option>
-                </select>
-            </form> -->
 
 
         <form action="/process_filters" method="POST">
@@ -73,10 +42,7 @@
             <input type="number" name = 'l_lim[]' placeholder="Lower Limit for Price">
             <input type="number" name = 'm_lim[]' placeholder="Max Limit for Price">
             <br>
-            <!-- <button type="Submit">Submit</button> -->
-        <!-- </form> -->
-
-        <!-- <form action="/process_filter_tables_checkbox" method="POST"> -->
+    
             <label for="">Industry Filters :</label>
             <br>
             {% for i in range(0,12) %}
@@ -85,54 +51,24 @@
             <label for="checkbox">{{Industries_filter[i]}}</label>
             <br>
             {% endfor %}
-            <!-- <input type="checkbox" name="checked_filter_boxes[]" value="1">
-            <label for="checkbox">Speciality Chemicals</label>
-            <br>
-            <input type="checkbox" name="checked_filter_boxes[]"value='2'>
-            <label for="checkbox">Engineering & Construction</label>
-            <br>
-            <input type="checkbox" name="checked_filter_boxes[]" value="3">
-            <label for="checkbox">Drug Manufacturers-Speciality & Generic</label>
-            <br>
-            <input type="checkbox" name="checked_filter_boxes[]" value="4">
-            <label for="checkbox">Auto Parts</label>
-            <br>
-            <input type="checkbox" name="checked_filter_boxes[]" value="5">
-            <label for="checkbox">Capital Markets</label>
-            <br>
-            <input type="checkbox" name="checked_filter_boxes[]" value="6">
-            <label for="checkbox">Information Technology Services</label>
-            <br>
-            <input type="checkbox" name="checked_filter_boxes[]" value="7">
-            <label for="checkbox">Steel</label>
-            <br>
-            <input type="checkbox" name="checked_filter_boxes[]"value='8'>
-            <label for="checkbox">Banks Regional</label>
-            <br>
-            <input type="checkbox" name="checked_filter_boxes[]" value="9">
-            <label for="checkbox">Industrial Machinery</label>
-            <br>
-            <input type="checkbox" name="checked_filter_boxes[]" value="10">
-            <label for="checkbox">Others</label>
-            <br>
-            <input type="checkbox" name="checked_filter_boxes[]" value="11">
-            <label for="checkbox">All</label>
-            <br> -->
             <input type="submit" value="Submit">
         </form>
 
         </div>
 
         <div class="content">
-            <!-- Display sorted stock list here -->
             <ul id="sortedStockList">
-                <!-- Sorted stocks will be displayed here -->
                 <table>
                     <thead>
-                        <tr>
+                        <tr class="button-row">
+                            <form action="/sort_filters" method="POST">
                             {% for col in filtered_df_columns %}
-                                <th>{{col}}</th>
+                                <th>
+                                    <button class="table-button" type="submit" name="sort" value="{{col}}">{{col}}</button>
+                                
+                                </th>
                             {% endfor %}
+                            </form>
                         </tr>
                     </thead>
                     <tbody>
