--- a/COP_290_Assignment1-main/static/style.css
+++ b/COP_290_Assignment1-main/static/style.css
@@ -530,8 +530,10 @@ input.SearchBar {
     font-size: 32px;
     /* padding: 10px; */
     /* margin: 5px; */
-    /* width : 100% ; */
+    width : 100% ;
     /* width: 75%; */
+    padding: 5px;
+    padding-left: 10px;
 }
 
 p.StockItem {
